frontend_tests/negative/unaddressable_array_slice/go.mod
module example.com/renvotests/negative/unaddressable_array_slice

go 1.25
